Use nowrap to fix column width problem on Firefox

--- a/timApp/static/scripts/tim/plugin/dataview/data-view.component.scss
+++ b/timApp/static/scripts/tim/plugin/dataview/data-view.component.scss
@@ -194,3 +194,16 @@ table {
   }
 }
 
+:host ::ng-deep {
+  tbody.content {
+    &.nowrap {
+      td {
+        white-space: nowrap;
+      }
+    }
+
+    td {
+      overflow: hidden;
+    }
+  }
+}
